cluster/apps/web/blueiris/ingress.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: blueiris
  namespace: web
spec:
  externalName: "nvr.${SECRET_INTERNAL_DOMAIN}"
  type: ExternalName

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blueiris-ingress
  namespace: web
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx-internal
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  tls:
  - hosts:
    - nvr.${SECRET_DOMAIN}
    secretName: nvr-cert
  rules:
  - host: nvr.${SECRET_DOMAIN}
    http:
      paths:
      - path: /
        backend:
          service: 
            name: blueiris
            port: 81
status:
  loadBalancer: {}
